init(theme): 初始化主题模块
