# pkg/serve/controller/theme/dto/delete_theme_request.go
@@ -1,0 +1,10 @@
+// Package dto 提供主题相关的数据传输对象
+// 创建者：Done-0
+// 创建时间：2025-05-14
+package dto
+
+// DeleteThemeRequest 删除主题请求
+type DeleteThemeRequest struct {
+	ID            int64 `json:"id" xml:"id" form:"id" query:"id" validate:"required"`                                                 // 主题ID
+	DeleteSetting bool  `json:"delete_setting" xml:"delete_setting" form:"delete_setting" query:"delete_setting" validate:"required"` // 是否删除设置
+}
